--- a/css/style.css
+++ b/css/style.css
@@ -8,20 +8,18 @@ body {
 
 #flag {
     box-sizing: border-box;
-    text-indent: -9999px;
     background: url('../images/Texas-shape.png');
     margin: auto;
     width: 100px;
     height: 98px;
     background-repeat: no-repeat;
-    padding
 }
 
 #container {
     border: 2px;
     border-style: solid;
     box-sizing: border-box;
-    width:50%;
+    width: 50%;
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
@@ -34,7 +32,7 @@ body {
 
 #quiz {
     text-indent: 10px;
-    display:none;
+    display: none;
 }
 
 ul {
@@ -45,29 +43,30 @@ ul {
 
 #title {
     font-family: 'Raleway', sans-serif;
+    margin-bottom: 15px;
 }
 
 .button {
-    border:4px solid;
-    border-radius:5px;
+    border: 4px solid;
+    border-radius: 5px;
     width: 40px;
-    padding-left:5px;
+    padding-left: 5px;
     padding-right: 5px;
     position: relative;
-    float:right;
+    float: right;
     background-color: #DCDCDC;
     color: black;
     margin: 0 2px 0 2px;
 }
 
-.button.active {
+.button:hover {
     background-color: #F8F8FF;
     color: #525252;
 }
 
 button {
     position: relative;
-    float:right;
+    float: right;
 }
 
 .button a {
@@ -86,7 +85,7 @@ button {
 
 #music {
     box-sizing: border-box;
-    width:50%;
+    width: 50%;
     margin:auto;
     padding: 0;
     font-weight: bold;
